Corrected error reading in osha.xlsx
Corrected error reading in osha.xlsx.  Now osha1.csv is now 16323 records long

--- a/tfidf Models.ipynb
+++ b/tfidf Models.ipynb
@@ -42,13 +42,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "osha=pd.read_excel('osha.xlsx',names = [\"Case\", \"Title\", \"Description\",\"Summary\", \"Classification\"])"
+    "osha=pd.read_excel('osha.xlsx', header=None, names = [\"Case\", \"Title\", \"Description\",\"Summary\", \"Classification\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Case</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Summary</th>\n",
+       "      <th>Classification</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>201079928</td>\n",
+       "      <td>Employee Is Burned By Forklift Radiator Fluid</td>\n",
+       "      <td>At approximately 11:30 a.m. on November 13  2...</td>\n",
+       "      <td>burn  industrial truck  waste proc fac  pa...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>202561825</td>\n",
+       "      <td>Employee Falls From Flatbed Trailer And Later...</td>\n",
+       "      <td>On August 30  2013  Employee #1 was working f...</td>\n",
+       "      <td>truck  flatbed truck  trailer  fall  abdomen</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>200361855</td>\n",
+       "      <td>Two Workers Are Struck By Motor Vehicle And O...</td>\n",
+       "      <td>On August 27  2013  Employees #1 and #2  of T...</td>\n",
+       "      <td>construction  undrgrd power line  highway ...</td>\n",
+       "      <td>1 317290559   Fatality Other Occupation not re...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>200361863</td>\n",
+       "      <td>Employee Is Struck By Bales Of Wire And Killed</td>\n",
+       "      <td>On August 26  2013  Employee #1  with Lee Iro...</td>\n",
+       "      <td>waste proc fac  industrial truck  struck b...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>201079324</td>\n",
+       "      <td>Employee Is Splashed With Hot Water And Is Bu...</td>\n",
+       "      <td>On July 14  2013  Employee #1  vacuum pump tr...</td>\n",
+       "      <td>truck driver  pump  tank  hot water  struc...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Case                                              Title  \\\n",
+       "0  201079928     Employee Is Burned By Forklift Radiator Fluid    \n",
+       "1  202561825   Employee Falls From Flatbed Trailer And Later...   \n",
+       "2  200361855   Two Workers Are Struck By Motor Vehicle And O...   \n",
+       "3  200361863    Employee Is Struck By Bales Of Wire And Killed    \n",
+       "4  201079324   Employee Is Splashed With Hot Water And Is Bu...   \n",
+       "\n",
+       "                                         Description  \\\n",
+       "0   At approximately 11:30 a.m. on November 13  2...   \n",
+       "1   On August 30  2013  Employee #1 was working f...   \n",
+       "2   On August 27  2013  Employees #1 and #2  of T...   \n",
+       "3   On August 26  2013  Employee #1  with Lee Iro...   \n",
+       "4   On July 14  2013  Employee #1  vacuum pump tr...   \n",
+       "\n",
+       "                                             Summary  \\\n",
+       "0      burn  industrial truck  waste proc fac  pa...   \n",
+       "1      truck  flatbed truck  trailer  fall  abdomen    \n",
+       "2      construction  undrgrd power line  highway ...   \n",
+       "3      waste proc fac  industrial truck  struck b...   \n",
+       "4      truck driver  pump  tank  hot water  struc...   \n",
+       "\n",
+       "                                      Classification  \n",
+       "0                                                     \n",
+       "1                                                     \n",
+       "2  1 317290559   Fatality Other Occupation not re...  \n",
+       "3                                                     \n",
+       "4                                                     "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "osha.head()"
    ]
   },
   {
