Added summary tables and updated cleaned data

--- a/Text Mining/notebooks/Data exploration.ipynb
+++ b/Text Mining/notebooks/Data exploration.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -23,13 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_path = \"../data/raw/\"\n",
-    "dfMsia = pd.read_excel(raw_path + \"MsiaAccidentCases.xlsx\")\n",
-    "dfOsha = pd.read_excel(raw_path + \"osha.xlsx\", header=None, index_col=0)"
+    "dfMsia = pd.read_excel(\"../data/interim/MsiaAccidentCases.xlsx\")\n",
+    "dfOsha = pd.read_excel(\"../data/raw/osha.xlsx\", header=None, index_col=0, names = [\"Title\", \"Description\",\"Summary\", \"Classification\"])"
    ]
   },
   {
@@ -41,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -91,13 +90,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Caught in/between Objects</td>\n",
+       "      <td>Collapse of object</td>\n",
        "      <td>Died due to mine cave-in</td>\n",
        "      <td>A series of avalanche trapped victim who was m...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Fires and Explosion</td>\n",
+       "      <td>Struck By Moving Objects</td>\n",
        "      <td>Died being run over by a lorry</td>\n",
        "      <td>Accident involving an employee who has been ru...</td>\n",
        "    </tr>\n",
@@ -110,8 +109,8 @@
        "0  Caught in/between Objects  Died being caught in between machines   \n",
        "1                      Other                       Died been buried   \n",
        "2   Struck By Moving Objects          Died crushed by entrance arch   \n",
-       "3  Caught in/between Objects               Died due to mine cave-in   \n",
-       "4        Fires and Explosion         Died being run over by a lorry   \n",
+       "3         Collapse of object               Died due to mine cave-in   \n",
+       "4   Struck By Moving Objects         Died being run over by a lorry   \n",
        "\n",
        "                                        Summary Case  \n",
        "0  The accident occurred as victim was assigned t...  \n",
@@ -121,7 +120,7 @@
        "4  Accident involving an employee who has been ru...  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +140,7 @@
        "(239, 3)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +161,7 @@
        "Index(['Cause', 'Title Case', 'Summary Case'], dtype='object')"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,19 +173,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array(['Caught in/between Objects', 'Other', 'Struck By Moving Objects',\n",
-       "       'Fires and Explosion', 'Falls', 'Electrocution',\n",
-       "       'Exposure to extreme temperatures', 'Collapse of object',\n",
+       "       'Collapse of object', 'Fires and Explosion', 'Falls',\n",
+       "       'Electrocution', 'Exposure to extreme temperatures',\n",
        "       'Exposure to Chemical Substances', 'Drowning', 'Suffocation', nan], dtype=object)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -239,8 +238,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Collapse of object</th>\n",
-       "      <td>8</td>\n",
-       "      <td>3.404255</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3.829787</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Drowning</th>\n",
@@ -249,8 +248,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Electrocution</th>\n",
-       "      <td>18</td>\n",
-       "      <td>7.659574</td>\n",
+       "      <td>17</td>\n",
+       "      <td>7.234043</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Exposure to Chemical Substances</th>\n",
@@ -259,8 +258,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Exposure to extreme temperatures</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0.851064</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.276596</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Falls</th>\n",
@@ -269,18 +268,18 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Fires and Explosion</th>\n",
-       "      <td>5</td>\n",
-       "      <td>2.127660</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.702128</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Other</th>\n",
-       "      <td>18</td>\n",
-       "      <td>7.659574</td>\n",
+       "      <td>17</td>\n",
+       "      <td>7.234043</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Struck By Moving Objects</th>\n",
-       "      <td>51</td>\n",
-       "      <td>21.702128</td>\n",
+       "      <td>52</td>\n",
+       "      <td>22.127660</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Suffocation</th>\n",
@@ -295,19 +294,19 @@
        "                                  Count  Percentage\n",
        "Cause                                              \n",
        "Caught in/between Objects            46   19.574468\n",
-       "Collapse of object                    8    3.404255\n",
+       "Collapse of object                    9    3.829787\n",
        "Drowning                              9    3.829787\n",
-       "Electrocution                        18    7.659574\n",
+       "Electrocution                        17    7.234043\n",
        "Exposure to Chemical Substances       2    0.851064\n",
-       "Exposure to extreme temperatures      2    0.851064\n",
+       "Exposure to extreme temperatures      3    1.276596\n",
        "Falls                                73   31.063830\n",
-       "Fires and Explosion                   5    2.127660\n",
-       "Other                                18    7.659574\n",
-       "Struck By Moving Objects             51   21.702128\n",
+       "Fires and Explosion                   4    1.702128\n",
+       "Other                                17    7.234043\n",
+       "Struck By Moving Objects             52   22.127660\n",
        "Suffocation                           3    1.276596"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -356,13 +355,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>236</td>\n",
+       "      <td>235</td>\n",
        "      <td>235</td>\n",
        "      <td>235</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>unique</th>\n",
-       "      <td>13</td>\n",
+       "      <td>11</td>\n",
        "      <td>170</td>\n",
        "      <td>234</td>\n",
        "    </tr>\n",
@@ -383,9 +382,9 @@
        "</div>"
       ],
       "text/plain": [
-       "       Cause                 Title Case  \\\n",
-       "count     236                       235   \n",
-       "unique     13                       170   \n",
+       "        Cause                Title Case  \\\n",
+       "count     235                       235   \n",
+       "unique     11                       170   \n",
        "top     Falls  Died falling from height   \n",
        "freq       73                        35   \n",
        "\n",
@@ -396,7 +395,7 @@
        "freq                                                    2  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -438,10 +437,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Summary</th>\n",
+       "      <th>Classification</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -492,7 +491,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                           1  \\\n",
+       "                                                       Title  \\\n",
        "0                                                              \n",
        "201079928     Employee Is Burned By Forklift Radiator Fluid    \n",
        "202561825   Employee Falls From Flatbed Trailer And Later...   \n",
@@ -500,7 +499,7 @@
        "200361863    Employee Is Struck By Bales Of Wire And Killed    \n",
        "201079324   Employee Is Splashed With Hot Water And Is Bu...   \n",
        "\n",
-       "                                                           2  \\\n",
+       "                                                 Description  \\\n",
        "0                                                              \n",
        "201079928   At approximately 11:30 a.m. on November 13  2...   \n",
        "202561825   On August 30  2013  Employee #1 was working f...   \n",
@@ -508,7 +507,7 @@
        "200361863   On August 26  2013  Employee #1  with Lee Iro...   \n",
        "201079324   On July 14  2013  Employee #1  vacuum pump tr...   \n",
        "\n",
-       "                                                           3  \\\n",
+       "                                                     Summary  \\\n",
        "0                                                              \n",
        "201079928      burn  industrial truck  waste proc fac  pa...   \n",
        "202561825      truck  flatbed truck  trailer  fall  abdomen    \n",
@@ -516,7 +515,7 @@
        "200361863      waste proc fac  industrial truck  struck b...   \n",
        "201079324      truck driver  pump  tank  hot water  struc...   \n",
        "\n",
-       "                                                           4  \n",
+       "                                              Classification  \n",
        "0                                                             \n",
        "201079928                                                     \n",
        "202561825                                                     \n",
@@ -525,7 +524,7 @@
        "201079324                                                     "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +544,7 @@
        "(16323, 4)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
