Some comments change

--- a/CA_Activities.ipynb
+++ b/CA_Activities.ipynb
@@ -32837,7 +32837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 162,
    "metadata": {
     "collapsed": true
    },
@@ -32856,7 +32856,7 @@
     "            NewColumn2.append(','.join(item.ActivityTokensChunk))\n",
     "    MsiaCasesDF.eval(\"ActivityVerb = @NewColumn1\", inplace=True)\n",
     "    MsiaCasesDF.eval(\"ActivityChunk = @NewColumn2\", inplace=True)\n",
-    "    WriteToExcel('MsiaWithActivity.xlsx',OshaCasesDF)\n",
+    "    WriteToExcel('MsiaWithActivity.xlsx',MsiaCasesDF)\n",
     "\n",
     "if ProcessOshaDataSet:\n",
     "    NewColumn1 = []\n",
@@ -32882,7 +32882,7 @@
     "\n",
     "- For Msia dataset there's only 240 records, so we have a rather small dataset for training. Also, Msia dataset only have Summary column whereas Osha has a more detailed Descrition column.\n",
     "\n",
-    "- For Osha, we were able to extract out 29502 activities. This could mean for each column more than 1 activity (most likely a series of activity) taking place prior to the accident since total records in the dataset is about 28780.\n",
+    "- For Osha, we were able to extract out 28780 activities. This could mean for each column more than 1 activity (most likely a series of activity) taking place prior to the accident since total records in the dataset is 16003.\n",
     "\n",
     "- In some sentences, for example, the actually activity is \"handling maintenance work\", thus the actual activity is maintenance work but because the regular expression parser is designed to extract the verb activity resulted in \"handling\" being captured instead of \"maintaining\" and results in a less than accurate description of the activity extracted from the dataset.\n",
     "\n",
