--- a/CA_bodyparts.ipynb
+++ b/CA_bodyparts.ipynb
@@ -1224,91 +1224,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Cause</th>\n",
-       "      <th>bodyparts</th>\n",
-       "      <th>count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Caught in/between Objects</td>\n",
-       "      <td>abdomen</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Caught in/between Objects</td>\n",
-       "      <td>ankle</td>\n",
-       "      <td>38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Caught in/between Objects</td>\n",
-       "      <td>arch</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Caught in/between Objects</td>\n",
-       "      <td>arm</td>\n",
-       "      <td>250</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Caught in/between Objects</td>\n",
-       "      <td>artery</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       Cause bodyparts  count\n",
-       "0  Caught in/between Objects   abdomen     25\n",
-       "1  Caught in/between Objects     ankle     38\n",
-       "2  Caught in/between Objects      arch      2\n",
-       "3  Caught in/between Objects       arm    250\n",
-       "4  Caught in/between Objects    artery      8"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dfSummary = summary.groupby(['Cause', 'bodyparts']).size().reset_index(name='count')\n",
-    "dfSummary.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
    "outputs": [
@@ -1491,6 +1406,424 @@
    ],
    "source": [
     "total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cause</th>\n",
+       "      <th>bodyparts</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Caught in/between Objects</td>\n",
+       "      <td>abdomen</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Caught in/between Objects</td>\n",
+       "      <td>ankle</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Caught in/between Objects</td>\n",
+       "      <td>arch</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Caught in/between Objects</td>\n",
+       "      <td>arm</td>\n",
+       "      <td>250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Caught in/between Objects</td>\n",
+       "      <td>artery</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Cause bodyparts  count\n",
+       "0  Caught in/between Objects   abdomen     25\n",
+       "1  Caught in/between Objects     ankle     38\n",
+       "2  Caught in/between Objects      arch      2\n",
+       "3  Caught in/between Objects       arm    250\n",
+       "4  Caught in/between Objects    artery      8"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfSummary = summary.groupby(['Cause', 'bodyparts']).size().reset_index(name='count')\n",
+    "dfSummary.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda/lib/python3.6/site-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \n",
+      "/anaconda/lib/python3.6/site-packages/ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  after removing the cwd from sys.path.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cause</th>\n",
+       "      <th>bodyparts</th>\n",
+       "      <th>count</th>\n",
+       "      <th>Percentage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>Caught in/between Objects</td>\n",
+       "      <td>hand</td>\n",
+       "      <td>569</td>\n",
+       "      <td>16.705813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Caught in/between Objects</td>\n",
+       "      <td>finger</td>\n",
+       "      <td>448</td>\n",
+       "      <td>13.153259</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Caught in/between Objects</td>\n",
+       "      <td>foot</td>\n",
+       "      <td>288</td>\n",
+       "      <td>8.455666</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Caught in/between Objects</td>\n",
+       "      <td>arm</td>\n",
+       "      <td>250</td>\n",
+       "      <td>7.339988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>Caught in/between Objects</td>\n",
+       "      <td>head</td>\n",
+       "      <td>240</td>\n",
+       "      <td>7.046389</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Cause bodyparts  count  Percentage\n",
+       "33  Caught in/between Objects      hand    569   16.705813\n",
+       "27  Caught in/between Objects    finger    448   13.153259\n",
+       "29  Caught in/between Objects      foot    288    8.455666\n",
+       "3   Caught in/between Objects       arm    250    7.339988\n",
+       "34  Caught in/between Objects      head    240    7.046389"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfSummary1 = dfSummary[dfSummary['Cause'] == 'Caught in/between Objects']\n",
+    "dfSummary1.sort_values(by='count', ascending=False, inplace=True)\n",
+    "total = dfSummary1['count'].sum()\n",
+    "dfSummary1['Percentage'] = (dfSummary1['count']/total)*100\n",
+    "dfSummary1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda/lib/python3.6/site-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \n",
+      "/anaconda/lib/python3.6/site-packages/ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  after removing the cwd from sys.path.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cause</th>\n",
+       "      <th>bodyparts</th>\n",
+       "      <th>count</th>\n",
+       "      <th>Percentage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>408</th>\n",
+       "      <td>Falls</td>\n",
+       "      <td>foot</td>\n",
+       "      <td>1044</td>\n",
+       "      <td>18.943930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>413</th>\n",
+       "      <td>Falls</td>\n",
+       "      <td>head</td>\n",
+       "      <td>692</td>\n",
+       "      <td>12.556705</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>421</th>\n",
+       "      <td>Falls</td>\n",
+       "      <td>leg</td>\n",
+       "      <td>399</td>\n",
+       "      <td>7.240065</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>379</th>\n",
+       "      <td>Falls</td>\n",
+       "      <td>back</td>\n",
+       "      <td>338</td>\n",
+       "      <td>6.133188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>412</th>\n",
+       "      <td>Falls</td>\n",
+       "      <td>hand</td>\n",
+       "      <td>232</td>\n",
+       "      <td>4.209762</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Cause bodyparts  count  Percentage\n",
+       "408  Falls      foot   1044   18.943930\n",
+       "413  Falls      head    692   12.556705\n",
+       "421  Falls       leg    399    7.240065\n",
+       "379  Falls      back    338    6.133188\n",
+       "412  Falls      hand    232    4.209762"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfSummary1 = dfSummary[dfSummary['Cause'] == 'Falls']\n",
+    "dfSummary1.sort_values(by='count', ascending=False, inplace=True)\n",
+    "total = dfSummary1['count'].sum()\n",
+    "dfSummary1['Percentage'] = (dfSummary1['count']/total)*100\n",
+    "dfSummary1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda/lib/python3.6/site-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \n",
+      "/anaconda/lib/python3.6/site-packages/ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  after removing the cwd from sys.path.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cause</th>\n",
+       "      <th>bodyparts</th>\n",
+       "      <th>count</th>\n",
+       "      <th>Percentage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>634</th>\n",
+       "      <td>Struck By Moving Objects</td>\n",
+       "      <td>hand</td>\n",
+       "      <td>1388</td>\n",
+       "      <td>13.769841</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>628</th>\n",
+       "      <td>Struck By Moving Objects</td>\n",
+       "      <td>finger</td>\n",
+       "      <td>1201</td>\n",
+       "      <td>11.914683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>635</th>\n",
+       "      <td>Struck By Moving Objects</td>\n",
+       "      <td>head</td>\n",
+       "      <td>925</td>\n",
+       "      <td>9.176587</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>630</th>\n",
+       "      <td>Struck By Moving Objects</td>\n",
+       "      <td>foot</td>\n",
+       "      <td>796</td>\n",
+       "      <td>7.896825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>599</th>\n",
+       "      <td>Struck By Moving Objects</td>\n",
+       "      <td>back</td>\n",
+       "      <td>717</td>\n",
+       "      <td>7.113095</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Cause bodyparts  count  Percentage\n",
+       "634  Struck By Moving Objects      hand   1388   13.769841\n",
+       "628  Struck By Moving Objects    finger   1201   11.914683\n",
+       "635  Struck By Moving Objects      head    925    9.176587\n",
+       "630  Struck By Moving Objects      foot    796    7.896825\n",
+       "599  Struck By Moving Objects      back    717    7.113095"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfSummary1 = dfSummary[dfSummary['Cause'] == 'Struck By Moving Objects']\n",
+    "dfSummary1.sort_values(by='count', ascending=False, inplace=True)\n",
+    "total = dfSummary1['count'].sum()\n",
+    "dfSummary1['Percentage'] = (dfSummary1['count']/total)*100\n",
+    "dfSummary1.head()"
    ]
   },
   {
